# ultalpr

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  build.rs  readme.md  wrapper.hpp
apps/alpr_service/: Cargo.toml  build.rs
apps/alpr_service/proto/: alpr.proto
apps/alpr_service/src/: alpr.rs  config.rs  main.rs  recognizer.rs  service.rs  trc.rs
apps/jpg-recognition/: Cargo.toml
apps/jpg-recognition/src/: main.rs
crates/engine/: Cargo.toml  build.rs  wrapper.hpp
crates/engine/src/: bindings.rs  config.rs  engine.rs  error.rs  lib.rs
src/: async_service.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs
src/alpr/: mod.rs
ultalpr/: Cargo.toml
ultalpr/src/: config.rs  engine.rs  error.rs  lib.rs  yuv.rs
