[workspace]
resolver = "2"
members = [
	"apps/jpg-recognition",
	"crates/engine"
]

[workspace.package]
edition = "2021"
authors = ["LIMPIX31"]
license = "GPL-3"

[workspace.dependencies]
engine = { path = "crates/engine" }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
