[package]
name = "ultalpr"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing       = { version = "0.1" }
thiserror     = { version = "1" }
serde         = { version = "1", features = ["derive"] }
serde_json    = { version = "1" }
image         = { version = "0.25", optional = true }
openh264      = { version = "0.6", optional = true }
async-channel = { version = "2", optional = true }

[build-dependencies]
bindgen = "0.69"

[features]
async-service = ["async-channel", "image"]
