[package]
name = "ultalpr"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
image = { version = "0.24", optional = true }
openh264 = { version = "0.5", optional = true }

[build-dependencies]
bindgen = "0.69.2"
