[package]
name = "alpr_service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
restream_core = { git = "ssh://git@github.com/frm-parking/restream.git", rev = "9a15d00aad84b1d853bab6a0ff5a4cd2ecd292ac" }
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
