[package]
name = "alpr_service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
engine.workspace = true
restream_core = { git = "ssh://git@github.com/frm-parking/restream.git", rev = "b8693018314f27c5aab1d469c1ef16c781126200" }
url = { version = "2.5", features = ["serde"] }
image = "0.24"
tonic = "0.10"
prost = "0.12"
toml = "0.8"
openh264 = "0.5"

[build-dependencies]
tonic-build = "0.10"
